1. Copy input to debug folder in proj 2. Day2 more idiomatic

--- a/Advent2018/Advent2018.fsproj
+++ b/Advent2018/Advent2018.fsproj
@@ -7,8 +7,12 @@
 
   <ItemGroup>
     <Compile Include="Shared.fs" />
-    <Content Include="Input2.txt" />
-    <Content Include="Input1.txt" />
+    <Content Include="Input2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Input1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="Day1.fs" />
     <Compile Include="Day2.fs" />
     <Compile Include="Program.fs" />
